k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: just-storage
  labels:
    name: just-storage
