k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: just-storage
  namespace: just-storage
  labels:
    app: just-storage
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: just-storage
